Fixed overflow options.

--- a/static/css/simple_register_lookup.css
+++ b/static/css/simple_register_lookup.css
@@ -8,7 +8,8 @@ div.innerDetails
 .dataTables_scrollBody
 {
     -webkit-overflow-scrolling: visible !important;
-    overflow: visible !important;
+    overflow-x: auto !important;
+    overflow-y: visible !important;
     height: auto !important;
 }
 
